--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,7 +3,7 @@ exclude: "^CHANGELOG.md$"
 
 repos:
   - repo: https://github.com/psf/black
-    rev: 23.3.0
+    rev: 24.1.1
     hooks:
       - id: black
         args:
@@ -19,12 +19,12 @@ repos:
           - "--line-length=120"
 
   - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v2.7.1
+    rev: v4.0.0-alpha.8
     hooks:
       - id: prettier
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v3.2.0
+    rev: v4.5.0
     hooks:
       - id: trailing-whitespace
       - id: end-of-file-fixer
@@ -33,12 +33,12 @@ repos:
       - id: no-commit-to-branch
 
   - repo: https://github.com/codespell-project/codespell
-    rev: v2.2.4
+    rev: v2.2.6
     hooks:
       - id: codespell
 
   - repo: https://github.com/snakemake/snakefmt
-    rev: v0.8.4
+    rev: v0.9.0
     hooks:
       - id: snakefmt
         args:
