--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,6 +17,7 @@ repos:
       - id: isort
         args:
           - "--line-length=120"
+          - "--profile=black"
 
   - repo: https://github.com/pre-commit/mirrors-prettier
     rev: v4.0.0-alpha.8
@@ -38,7 +39,7 @@ repos:
       - id: codespell
 
   - repo: https://github.com/snakemake/snakefmt
-    rev: v0.9.0
+    rev: v0.10.0
     hooks:
       - id: snakefmt
         args:
