--- a/.tests/config/config.yaml
+++ b/.tests/config/config.yaml
@@ -113,3 +113,7 @@ threads:
   mapping__mapping: 4
   mapping__indexing: 2
   variants__bcftools: 2
+
+module_versions:
+  reads: "v3.2.1"
+  mapping: "v2.1.0"
