--- a/config/config.yaml
+++ b/config/config.yaml
@@ -82,12 +82,15 @@ variants__bcftools: # Uses bcftools mpileup and bcftools call.
 
   do_postfilter: True # Whether to postfilter variants.
   postfilter: # Uses bcftools norm, annotate and filter.
-    multiallelic: "+any" # Split (-) or join (+) biallelic sites into multiallelic records. Define snps | indels | any | both.
+    multiallelic: "+any" # OPT - Split (-) or join (+) biallelic sites into multiallelic records. Define snps | indels | any | both.
+    multi_overlaps: null # OPT - Allowed: "missing", "reference". Use the reference (0) or missing (.) allele for overlapping alleles after splitting multiallelic sites.
+    atomize: False # Whether to split MNVs into consecutive SNVs.
+    atom_overlaps: "star" # OPT - Allowed: "missing", "star". Alleles missing because of an overlapping variant can be set either to missing (.) or to star (*) as recommended by VCF spec.
     snp_gap: 3 # Filter SNPs within INT base pairs of an indel or other other variant type.
     indel_gap: 10 # Filter clusters of indels separated by INT or fewer base pairs allowing only one to pass.
-    set_gts_for_failed: "." # Either missing value '.'  or reference allele ('0').
+    set_gts_for_failed: "missing" # OPT - Allowed: "missing", "reference". Set genotypes of failed samples to missing value (.) or reference allele (0).
     include: 'INFO/DP>=10 & GT="alt" & (DP4[2]+DP4[3])/INFO/DP>=0.50' # Filter which sites to include.
-    exclude: "" # Filter which sites to include.
+    exclude: "" # Filter which sites to exclude.
     trim_alt_alleles: True # Remove alleles not seen in the genotype fields from the ALT column.
 
 variants__ivar:
@@ -107,7 +110,6 @@ variants__ivar:
     min_total_depth: 10 # Mixed positions must have at least this TOTAL_DP value.
 
 variants__freebayes:
-  # input filters for freebayes
   min_mapping_quality: 30 # Exclude alignments from analysis if they have a mapping quality less than Q. Default: 30.
   min_base_quality: 20 # Exclude alleles from analysis if their supporting base quality is less than Q. Default: 20.
   mismatch_base_quality_threshold: 10 # Count mismatches with base quality higher than this. Default: 10.
@@ -121,25 +123,23 @@ variants__freebayes:
   min_coverage: 10 # Require at least this coverage to process a site. Default: 0.
   limit_coverage: null # OPT - Integer. Downsample per-sample coverage to this level if greater than this coverage. Default: null.
   skip_coverage: null # OPT - Integer. Skip processing of alignments overlapping positions with coverage >N. This filters sites above this coverage, but will also reduce data nearby. Default: null.
-
-  # report
   ploidy: 2 # Sets the default ploidy for the analysis to N. Default: 2
   gvcf: False # Write gVCF output, which indicates coverage in uncalled regions, emitting a record for all bases. Default: False.
   report_all_haplotype_alleles: False # At sites where genotypes are made over haplotype alleles, provide information about all alleles in output, not only those which are called. Default: False.
   report_monorphic: False # Report even loci which appear to be monomorphic, and report all considered alleles, even those which are not in called genotypes. Loci which do not have any potential alternates have '.' for ALT. Default: False
 
-  # normalization: # (one of `-a`, `-f`, `-m`, `-D` or `-d` must be used)
-  # normalization:
-  #   multiallelic: "+any" # Split (-) or join (+) biallelic sites into multiallelic records. Define snps | indels | any | both.
-  # do_postfilter: True # Whether to postfilter variants.
-  # postfilter: # Uses bcftools norm, annotate and filter.
-  #   multiallelic: "+any" # Split (-) or join (+) biallelic sites into multiallelic records. Define snps | indels | any | both.
-  #   snp_gap: 3 # Filter SNPs within INT base pairs of an indel or other other variant type.
-  #   indel_gap: 10 # Filter clusters of indels separated by INT or fewer base pairs allowing only one to pass.
-  #   set_gts_for_failed: "." # Either missing value '.'  or reference allele ('0').
-  #   include: 'INFO/DP>=10 & GT="alt" & (DP4[2]+DP4[3])/INFO/DP>=0.50' # Filter which sites to include.
-  #   exclude: "" # Filter which sites to include.
-  #   trim_alt_alleles: True # Remove alleles not seen in the genotype fields from the ALT column.
+  do_postfilter: True # Whether to postfilter variants.
+  postfilter: # Uses bcftools norm, annotate and filter.
+    multiallelic: "+any" # OPT - Split (-) or join (+) biallelic sites into multiallelic records. Define snps | indels | any | both.
+    multi_overlaps: null # OPT - Allowed: "missing", "reference". Use the reference (0) or missing (.) allele for overlapping alleles after splitting multiallelic sites.
+    atomize: False # Whether to split MNVs into consecutive SNVs.
+    atom_overlaps: "star" # OPT - Allowed: "missing", "star". Alleles missing because of an overlapping variant can be set either to missing (.) or to star (*) as recommended by VCF spec.
+    snp_gap: 3 # Filter SNPs within INT base pairs of an indel or other other variant type.
+    indel_gap: 10 # Filter clusters of indels separated by INT or fewer base pairs allowing only one to pass.
+    set_gts_for_failed: "missing" # OPT - Allowed: "missing", "reference". Set genotypes of failed samples to missing value (.) or reference allele (0).
+    include: 'INFO/DP>=10 & GT="alt" & (DP4[2]+DP4[3])/INFO/DP>=0.50' # Filter which sites to include.
+    exclude: "" # Filter which sites to exclude.
+    trim_alt_alleles: True # Remove alleles not seen in the genotype fields from the ALT column.
 
 consensus__ivar:
   count_orphans: false # Set to true to use also anomalous read pairs, i.e. without the properly-paired flag set.
