--- a/config/config.yaml
+++ b/config/config.yaml
@@ -173,6 +173,7 @@ threads:
   mapping__indexing: 2
   variants__bcftools: 4
   variants__freebayes: 4
+  variants__mutect2: 4
 
 module_versions:
   reads: "v3.2.1"
