--- a/.tests/config/config.yaml
+++ b/.tests/config/config.yaml
@@ -52,10 +52,11 @@ variants__bcftools: # Uses bcftools mpileup and bcftools call.
   min_fraction_of_gaps: 0.05 # Minimum fraction of gapped reads.
   annotation: "FORMAT/AD,FORMAT/ADF,FORMAT/ADR,FORMAT/DP" # Comma-separated list of FORMAT and INFO tags to output.
   redo_base_alignment_qual: True # Recalculate BAQ on the fly, ignore existing BQ tags.
-  ploidy: "GRCh38" # Predefined ploidy.
-  keep_alts: True # Report all alleles, not only those which are in called genotypes.
-  variants_only: True # Output variant sites only.
-  format_fields: "GQ,GP" # Comma-separated list of FORMAT fields to output for each sample.
+  ploidy: "2" # Enum ["2"]: Predefined ploidy. Allowed: 'GRCh37', 'GRCh38', 'X', 'Y', '1', '2'".
+  prior: 0.0011 # Float [0.0011]: Expected substitution rate per site. Stricter calls are obtained by using smaller value, more benevolent calls are obtained by using bigger value.
+  keep_alts: True # Bool [False]: Output all alternate alleles present in the alignments even if they do not appear in any of the genotypes.
+  variants_only: True # Bool [False]: Output variant sites only.
+  annotate: ["FORMAT/GQ", "FORMAT/GP"] # *Array of enums ([]): Comma-separated list of FORMAT fields to output. Allowed: "FORMAT/GQ", "FORMAT_GP", "INFO/PV4".
 
   do_postfilter: True # Whether to postfilter variants.
   postfilter: # Uses bcftools norm, annotate and filter.
@@ -85,6 +86,25 @@ variants__ivar:
     min_alt_freq: 0.1 # Mixed positions must have at least this ALT_FREQ value.
     max_alt_freq: 0.9 # Mixed positions cannot have ALT_FREQ value equal or larger than this.
     min_total_depth: 10 # Mixed positions must have at least this TOTAL_DP value.
+
+variants__mutect2:
+  base_quality_score_threshold: 18 # Int (18): Base qualities below this threshold will be reduced to the minimum (6)
+  callable_depth: 10 # Int (10): Minimum depth to be considered callable for Mutect stats. Does not affect genotyping.
+  f1r2_max_depth: 200 # Int (200): Sites with depth higher than this value will be grouped.
+  f1r2_median_mq: 50 # Int (50): Skip sites with median mapping quality below this value.
+  f1r2_min_bq: 20 # Int (20): Exclude bases below this quality from pileup.
+  min_base_quality_score: 10 # Int (10): Minimum base quality score for a base to be considered.
+  max_reads_per_alignment_start: 50 # Int (50): Maximum number of reads to retain per alignment start position. Reads above this threshold will be downsampled. Set to 0 to disable.
+
+  do_postfilter: True # Whether to postfilter variants.
+  postfilter:
+    microbial_mode: True # Bool (False): Set filters to microbial defaults.
+    min_median_base_quality: 20 # Int (20): Minimum median base quality of alt reads.
+    min_median_mapping_quality: -1 # Int (-1): Minimum median mapping quality of alt reads.
+    min_median_read_position: 1 # Int (1): Minimum median distance of variants from the end of reads.
+    min_reads_per_strand: 0 # Int (0): Minimum alt reads required on both forward and reverse strands.
+    min_slippage_length: 8 # Int (8): Minimum number of reference bases in an STR to suspect polymerase slippage.
+    pcr_slippage_rate: 0.1 # Float (0.1): The frequency of polymerase slippage in contexts where it is suspected.
 
 variants__freebayes:
   # input filters for freebayes
@@ -131,7 +151,7 @@ consensus__ivar:
 ### RESOURCES #############################
 
 max_threads: 8
-max_mem_mb: 16384
+max_mem_mb: 4096
 
 resources:
   reads__trimming_mem_mb: 4096
@@ -141,6 +161,7 @@ resources:
   mapping__deduplication_mem_mb: 4096
   mapping__qualimap_mem_mb: 4096
   variants__freebayes_mem_mb: 4096
+  variants__mutect2_mem_mb: 4096
 
 threads:
   reads__trimming: 4
