--- a/config/config.yaml
+++ b/config/config.yaml
@@ -17,6 +17,8 @@ variants:
 consensus:
   callers: ["ivar"] # Specify method for consensus calling: "ivar" or empty list.
 
+# Name: {production value} # Parameter type [tool default]: Description
+
 ### HYPERPARAMETERS #############################
 reads__subsampling__seqtk:
   seed: 1
@@ -58,7 +60,7 @@ reads__trimming__cutadapt:
   max_expected_errors: null # OPT - Discard read if R1 or R2 has more expected errors than this.
 
 reads__decontamination__kraken:
-  kraken_dir: "path_to_kraken/k2_viral_20230314" # Directory containing kraken DB files. If does not exist, will be downloaded using the dirname.
+  kraken_dir: "/data/genome/metagenome/kraken/k2_pluspf_20240112/" # Directory containing kraken DB files. If does not exist, will be downloaded using the dirname.
   # get KRAKEN_TAG from https://benlangmead.github.io/aws-indexes/k2
   exclude_taxa_ids: # list of taxonomy IDs to exclude.
     - 9606 # Homo Sapiens
@@ -75,10 +77,12 @@ variants__bcftools: # Relevant only if bcftools is requested in variants->caller
   min_fraction_of_gaps: 0.05 # Minimum fraction of gapped reads.
   annotation: "FORMAT/AD,FORMAT/ADF,FORMAT/ADR,FORMAT/DP" # Comma-separated list of FORMAT and INFO tags to output.
   redo_base_alignment_qual: True # Recalculate BAQ on the fly, ignore existing BQ tags.
-  ploidy: "GRCh38" # Predefined ploidy.
-  keep_alts: True # Report all alleles, not only those which are in called genotypes.
-  variants_only: True # Output variant sites only.
-  format_fields: "GQ,GP" # Comma-separated list of FORMAT fields to output for each sample.
+
+  ploidy: "2" # Enum ["2"]: Predefined ploidy. Allowed: 'GRCh37', 'GRCh38', 'X', 'Y', '1', '2'".
+  prior: 0.0011 # Float [0.0011]: Expected substitution rate per site. Stricter calls are obtained by using smaller value, more benevolent calls are obtained by using bigger value.
+  keep_alts: True # Bool [False]: Output all alternate alleles present in the alignments even if they do not appear in any of the genotypes.
+  variants_only: True # Bool [False]: Output variant sites only.
+  annotate: ["FORMAT/GQ", "FORMAT/GP"] # *Array of enums ([]): Comma-separated list of FORMAT fields to output. Allowed: "FORMAT/GQ", "FORMAT_GP", "INFO/PV4".
 
   do_postfilter: True # Whether to postfilter variants.
   postfilter: # Relevant only if do_postfilter is True. Uses bcftools norm, annotate and filter.
@@ -92,22 +96,6 @@ variants__bcftools: # Relevant only if bcftools is requested in variants->caller
     include: 'INFO/DP>=10 & GT="alt" & (DP4[2]+DP4[3])/INFO/DP>=0.50' # OPT - Filter which sites to include.
     exclude: null # OPT - Filter which sites to exclude.
     trim_alt_alleles: True # Remove alleles not seen in the genotype fields from the ALT column.
-
-variants__ivar: # Relevant only if ivar is requested in variants->callers element.
-  count_orphans: false # Set to true to use also anomalous read pairs, i.e. without the properly-paired flag set.
-  max_read_depth: 600000 # Limits the number of reads to load in memory per input file.
-  min_base_quality: 13 # Minimum base quality for a base to be considered. Setting to 0 make the overlapping bases reappear, albeit with 0 quality.
-  min_mapping_quality: 20 # Minimum mapping quality for an alignment to be used.
-  min_base_quality_threshold: 20 # Minimum quality score threshold to count base.
-  min_frequency_threshold: 0.03 # Minimum frequency threshold (0 - 1) to call variants.
-  min_read_depth: 10 # Minimum read depth to call variants.
-
-  do_postfilter: True # Whether to postfilter variants.
-  postfilter:
-    min_alt_depth: 2 # Mixed positions must have at least this ALT_DP value.
-    min_alt_freq: 0.1 # Mixed positions must have at least this ALT_FREQ value.
-    max_alt_freq: 0.9 # Mixed positions cannot have ALT_FREQ value equal or larger than this.
-    min_total_depth: 10 # Mixed positions must have at least this TOTAL_DP value.
 
 variants__freebayes: # Relevant only if freebayes is requested in variants->callers element.
   min_mapping_quality: 30 # Exclude alignments from analysis if they have a mapping quality less than Q. Default: 30.
@@ -141,6 +129,41 @@ variants__freebayes: # Relevant only if freebayes is requested in variants->call
     exclude: null # OPT - Filter which sites to exclude.
     trim_alt_alleles: True # Remove alleles not seen in the genotype fields from the ALT column.
 
+variants__ivar: # Relevant only if ivar is requested in variants->callers element.
+  count_orphans: false # Set to true to use also anomalous read pairs, i.e. without the properly-paired flag set.
+  max_read_depth: 600000 # Limits the number of reads to load in memory per input file.
+  min_base_quality: 13 # Minimum base quality for a base to be considered. Setting to 0 make the overlapping bases reappear, albeit with 0 quality.
+  min_mapping_quality: 20 # Minimum mapping quality for an alignment to be used.
+  min_base_quality_threshold: 20 # Minimum quality score threshold to count base.
+  min_frequency_threshold: 0.03 # Minimum frequency threshold (0 - 1) to call variants.
+  min_read_depth: 10 # Minimum read depth to call variants.
+
+  do_postfilter: True # Whether to postfilter variants.
+  postfilter:
+    min_alt_depth: 2 # Mixed positions must have at least this ALT_DP value.
+    min_alt_freq: 0.1 # Mixed positions must have at least this ALT_FREQ value.
+    max_alt_freq: 0.9 # Mixed positions cannot have ALT_FREQ value equal or larger than this.
+    min_total_depth: 10 # Mixed positions must have at least this TOTAL_DP value.
+
+variants__mutect2:
+  base_quality_score_threshold: 18 # Int (18): Base qualities below this threshold will be reduced to the minimum (6)
+  callable_depth: 10 # Int (10): Minimum depth to be considered callable for Mutect stats. Does not affect genotyping.
+  f1r2_max_depth: 200 # Int (200): Sites with depth higher than this value will be grouped.
+  f1r2_median_mq: 50 # Int (50): Skip sites with median mapping quality below this value.
+  f1r2_min_bq: 20 # Int (20): Exclude bases below this quality from pileup.
+  min_base_quality_score: 10 # Int (10): Minimum base quality score for a base to be considered.
+  max_reads_per_alignment_start: 50 # Int (50): Maximum number of reads to retain per alignment start position. Reads above this threshold will be downsampled. Set to 0 to disable.
+
+  do_postfilter: True # Whether to postfilter variants.
+  postfilter:
+    microbial_mode: True # Bool (False): Set filters to microbial defaults.
+    min_median_base_quality: 20 # Int (20): Minimum median base quality of alt reads.
+    min_median_mapping_quality: -1 # Int (-1): Minimum median mapping quality of alt reads.
+    min_median_read_position: 1 # Int (1): Minimum median distance of variants from the end of reads.
+    min_reads_per_strand: 0 # Int (0): Minimum alt reads required on both forward and reverse strands.
+    min_slippage_length: 8 # Int (8): Minimum number of reference bases in an STR to suspect polymerase slippage.
+    pcr_slippage_rate: 0.1 # Float (0.1): The frequency of polymerase slippage in contexts where it is suspected.
+
 consensus__ivar: # Relevant only if ivar is requested in consensus->callers element.
   count_orphans: false # Set to true to use also anomalous read pairs, i.e. without the properly-paired flag set.
   max_read_depth: 1000 # limits the number of reads to load in memory per input file.
@@ -163,6 +186,7 @@ resources:
   mapping__deduplication_mem_mb: 4096
   mapping__qualimap_mem_mb: 4096
   variants__freebayes_mem_mb: 8192
+  variants__mutect2_mem_mb: 8192
 
 threads:
   reads__trimming: 4
