--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -2,9 +2,6 @@ from snakemake.utils import min_version
 
 min_version("7.25.0")
 
-if os.path.exists(".parameters_parsed.txt"):
-    os.remove(".parameters_parsed.txt")
-
 
 include: "rules/common.smk"
 
@@ -37,5 +34,8 @@ rule all:
     localrule: True
 
 
-with open(".parameters_parsed.txt", "a") as f:
-    f.write(get_all_relevant_extra_params())
+# onstart:
+#     path = os.path.abspath(".parameters_parsed.txt")
+#     logger.info(f"Dumping converted parameters from config into {path}")
+#     with open(path, "w") as f:
+#         f.write(get_all_relevant_extra_params())
